test/core/errors/syntax_error/zs/rshift_with_space_error.zs
package rshift_with_space_error;

const uint32 RshiftError = 12 > > 2;
